Changed the website to be my resume

--- a/index.html
+++ b/index.html
@@ -1,7 +1,88 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ronald "Trey" Menna's Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            line-height: 1.6;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .section-title {
+            margin-bottom: 10px;
+            font-size: 1.5em;
+            color: #34495e;
+        }
+        .contact-info, .experience, .education, .skills, .projects {
+            margin-bottom: 15px;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1>Ronald "Trey" Menna</h1>
+        <p><strong>Address:</strong> 2194 Charlotte Court, Wheaton, Illinois</p>
+        <p><strong>Phone:</strong> 630-433-6522</p>
+        <p><strong>Email:</strong> <a href="mailto:rmenna@luc.edu">rmenna@luc.edu</a></p>
+        <p><strong>LinkedIn Profile:</strong> <a href="[LinkedIn Profile URL]">LinkedIn Profile</a></p>
+    </header>
+    <section class="section">
+        <h2 class="section-title">Objective</h2>
+        <p>Skilled Computer Programmer capable of producing and troubleshooting code efficiently. Well-versed in problem-solving with experience in both independent and team-based environments.</p>
+    </section>
+    <section class="section education">
+        <h2 class="section-title">Education</h2>
+        <p><strong>Bachelor of Science, Computer Science</strong><br>
+        Loyola University Chicago<br>
+        2020 – 2024</p>
+    </section>
+    <section class="section experience">
+        <h2 class="section-title">Experience</h2>
+        <div class="job">
+            <p><strong>Web Developer</strong><br>
+            GetGibi<br>
+            2030 – Current</p>
+            <ul>
+                <li>Created custom React components for the web application.</li>
+                <li>Redesigned the dashboard for the mobile application.</li>
+            </ul>
+        </div>
+        <div class="job">
+            <p><strong>Web Page Designer</strong><br>
+            Cartera<br>
+            2019</p>
+            <ul>
+                <li>Recreated a reference photo into a fully functional webpage using HTML and SCSS with Ionic and Angular frameworks, optimized for both PC and mobile users.</li>
+            </ul>
+        </div>
+    </section>
+    <section class="section skills">
+        <h2 class="section-title">Skills</h2>
+        <ul>
+            <li>Software Development</li>
+            <li>Git</li>
+            <li>Linux/Bash</li>
+            <li>Automated Testing</li>
+            <li>JavaScript, HTML, CSS, Python</li>
+            <li>AWS Services</li>
+            <li>Strong knowledge in Object-Oriented Programming</li>
+        </ul>
+    </section>
+    <section class="section projects">
+        <h2 class="section-title">Projects</h2>
+        <ul>
+            <li>Uber Eats-like web application (Bootstrap, React)</li>
+            <li>Video game final boss (Python)</li>
+            <li>Convenient apps (Bash)</li>
+        </ul>
+    </section>
 </body>
 </html>
