--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <h1>Ronald "Trey" Menna</h1>
         <p><strong>Address:</strong> 2194 Charlotte Court, Wheaton, Illinois</p>
         <p><strong>Phone:</strong> 630-433-6522</p>
-        <p><strong>Email:</strong> <a href="mailto:rmenna@luc.edu">rmenna@luc.edu</a></p>
-        <p><strong>LinkedIn Profile:</strong> <a href="[LinkedIn Profile URL]">LinkedIn Profile</a></p>
+        <p><strong>Email:</strong> <a href="mailto:treymenna@gmail.com">rmenna@luc.edu</a></p>
+        <p><strong>LinkedIn Profile:</strong> <a href="https://www.linkedin.com/in/trey-menna-a0445029a/">LinkedIn Profile</a></p>
     </header>
     <section class="section">
         <h2 class="section-title">Objective</h2>
@@ -56,7 +56,7 @@
             </ul>
         </div>
         <div class="job">
-            <p><strong>Web Page Designer</strong><br>
+            <p><strong>Web Page Developer</strong><br>
             Cartera<br>
             2019</p>
             <ul>
