--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>Ronald "Trey" Menna</h1>
         <p><strong>Address:</strong> 2194 Charlotte Court, Wheaton, Illinois</p>
         <p><strong>Phone:</strong> 630-433-6522</p>
-        <p><strong>Email:</strong> <a href="mailto:treymenna@gmail.com">rmenna@luc.edu</a></p>
+        <p><strong>Email:</strong> <a href="mailto:treymenna@gmail.com">treymenna@gmail.com</a></p>
         <p><strong>LinkedIn Profile:</strong> <a href="https://www.linkedin.com/in/trey-menna-a0445029a/">LinkedIn Profile</a></p>
     </header>
     <section class="section">
@@ -72,6 +72,7 @@
             <li>Linux/Bash</li>
             <li>Automated Testing</li>
             <li>JavaScript, HTML, CSS, Python</li>
+            <li>React</li>
             <li>AWS Services</li>
             <li>Strong knowledge in Object-Oriented Programming</li>
         </ul>
